@@ -16,6 +16,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   Previously it would have failed with a "No such file or directory" error.
   [bug introduced in coreutils-9.1]
 
+  'cp --sparse=never' will avoid copy-on-write (reflinking) and copy offloading,
+  to ensure no holes present in the destination copy.
+  [bug introduced in coreutils-9.0]
+
   cksum again diagnoses read errors in its default CRC32 mode.
   [bug introduced in coreutils-9.0]
 
@@ -47,6 +51,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   'pr --length=1 --double-space' no longer enters an infinite loop.
   [This bug was present in "the beginning".]
 
+  shred again operates on Solaris when built for 64 bits.
+  Previously it would have exited with a "getrandom: Invalid argument" error.
+  [bug introduced in coreutils-9.0]
+
   tac now handles short reads on its input.  Previously it may have exited
   erroneously, especially with large input files with no separators.
   [This bug was present in "the beginning".]
@@ -54,8 +62,6 @@ GNU coreutils NEWS                                    -*- outline -*-
   'uptime' no longer incorrectly prints "0 users" on OpenBSD,
   and is being built again on FreeBSD and Haiku.
   [bugs introduced in coreutils-9.2]
-
-  [bug introduced in coreutils-9.2]
 
   'wc -l' and 'cksum' no longer crash with an "Illegal instruction" error
   on x86 Linux kernels that disable XSAVE YMM.  This was seen on Xen VMs.
